Update debian definition

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-python-jpegtran-cffi (0.5-1) UNRELEASED; urgency=medium
+python-jpegtran (0.5-1) UNRELEASED; urgency=medium
 
   * Initial release.
 
